Fixed overlay on ios 10. Added a smooth overlay appearance effect.

--- a/themes/default/src/scss/_sidebar.scss
+++ b/themes/default/src/scss/_sidebar.scss
@@ -175,7 +175,15 @@
     }
 
     .overlay {
-        display: none;
+        position: absolute;
+        height: 0;
+        width: 0;
+        transition: opacity 0.2s;
+        opacity: 0;
+        background: #3b3b3b;
+        top: 0;
+        right: 0;
+        cursor: pointer;
     }
 
     .sidebar_opened {
@@ -192,11 +200,7 @@
         }
 
         .overlay {
-            display: block;
-            position: absolute;
-            background: #000000;
             opacity: 0.2;
-            top: 0;
             height: 100%;
             width: 100%;
             z-index: 12;
